Mudanças por Arthur Simoes

--- a/html_E_Js/index.html
+++ b/html_E_Js/index.html
@@ -16,6 +16,6 @@
     </form>
     <div id="mensagem" class="mensagem"></div>
 
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
