--- a/projeto2/index.html
+++ b/projeto2/index.html
@@ -21,7 +21,7 @@
             <input type="number" required placeholder="Nota Da Atividade" min="0" max="10">
             <button type="submit">Adicionar</button>
         </form>
-        <table>
+        <table cellspacing="0">
             <thead>
                 <tr>
                     <th>
