--- a/projeto2/index.html
+++ b/projeto2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cauculadora de medias</title>
+    <script src="main.js " defer></script>
     <link rel="stylesheet" href="./StyleIndex.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +17,9 @@
             <img src="./images/logo.png" alt="Logo">
             <h1>Cauculadora de médias</h1>
         </header>
-        <form>
-            <input type="text" required placeholder="Nome Da Atividade">
-            <input type="number" required placeholder="Nota Da Atividade" min="0" max="10">
+        <form id="form-atividade">
+            <input type="text" id="nome-atividade" placeholder="Nome Da Atividade">
+            <input type="number" id="nota-atividade" required placeholder="Nota Da Atividade" min="0" max="10">
             <button type="submit">Adicionar</button>
         </form>
         <table cellspacing="0">
@@ -35,24 +36,13 @@
                     </th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        atividade 1
-                    </td>
-                    <td>
-                        7
-                    </td>
-                    <td>
-                        <img src="./images/aprovado.png" alt="">
-                    </td>
-                </tr>            
+            <tbody>           
             </tbody>
             <tfoot>
                 <tr>
                     <td>média final</td>
-                    <td>7</td>
-                    <td>aprovado</td>
+                    <td id="mediaValor">---</td>
+                    <td id="resultadoFinal"><span class="resultado aprovado">---</span></td>
                 </tr>
             </tfoot>
         </table>
